Cascading-jdbc Change Log

2.7.0 (unreleased)
- update to Cascading 2.7
- fix issue in Derby InputSplit handline

2.6.0 
- add cascading-jdbc-<subprojec>:<version> to Cascading Frameworks property
- enabled parameter sanitization for username and password
- added support for Teradata (cascading-jdbc-teradata)
- update to cascading 2.6

2.5.5
- enable mysql streaming

2.5.4
- update to cascading 2.5.5
- fix a bug related to type handling and table creation

2.5.3
- RedshiftScheme constructor is now accepting additional conditions
- JDBCTap uses DatabaseMetaData to check if a table exists

2.5.2
- upgrade redshift jdbc driver to 8.4-702.jdbc4
- reduce size of test jars
- replaceOnInsert support for MySQL
- more robust query discovery

2.5.1
- update to cascading 2.5.2
- fix issue in batch processing
- enable hadoop2-mr1 platform for the lingual providers

2.5.0
- Support for Cascading 2.5.x
- More robust batch processing
- More robust check if a table exists
- full support for SinkMode.UPDATE

2.2.0
- initial release of Cascading 2.2 compatible version