@@ -2,7 +2,8 @@ Cascading-jdbc Change Log
 
 2.7.0 (unreleased)
 - update to Cascading 2.7
-- fix issue in Derby InputSplit handline
+- fix issue in Derby InputSplit handling
+- deprecated c.j.Utils, use c.u.Util instead
 
 2.6.0 
 - add cascading-jdbc-<subprojec>:<version> to Cascading Frameworks property
